--- a/package.json
+++ b/package.json
@@ -46,6 +46,7 @@
     "react-native-screens": "3.31.1",
     "react-native-svg": "^15.7.1",
     "react-native-web": "~0.19.10",
+    "sonner-native": "^0.14.2",
     "tailwindcss": "^3.4.13",
     "zod": "^3.23.8"
   },
