--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "preset": "jest-expo"
   },
   "dependencies": {
+    "@10play/tentap-editor": "^0.5.21",
     "@expo/html-elements": "^0.4.2",
     "@expo/vector-icons": "^14.0.2",
     "@gluestack-ui/avatar": "^0.1.17",
@@ -54,6 +55,7 @@
     "react-native-screens": "3.31.1",
     "react-native-svg": "^15.7.1",
     "react-native-web": "~0.19.10",
+    "react-native-webview": "13.8.6",
     "sonner-native": "^0.14.2",
     "tailwindcss": "^3.4.13",
     "zod": "^3.23.8"
