--- a/package.json
+++ b/package.json
@@ -58,7 +58,8 @@
     "react-native-webview": "13.8.6",
     "sonner-native": "^0.14.2",
     "tailwindcss": "^3.4.13",
-    "zod": "^3.23.8"
+    "zod": "^3.23.8",
+    "expo-haptics": "~13.0.1"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
