--- a/package.json
+++ b/package.json
@@ -26,8 +26,10 @@
     "@gluestack-ui/input": "^0.1.31",
     "@gluestack-ui/nativewind-utils": "^1.0.24",
     "@gluestack-ui/overlay": "^0.1.15",
+    "@gluestack-ui/slider": "^0.1.25",
     "@gluestack-ui/toast": "^1.0.7",
     "@hookform/resolvers": "^3.9.0",
+    "@kolking/react-native-rating": "^1.3.4",
     "@legendapp/motion": "^2.4.0",
     "@react-native-async-storage/async-storage": "1.23.1",
     "@react-navigation/native": "^6.0.2",
@@ -36,6 +38,7 @@
     "expo-build-properties": "~0.12.5",
     "expo-constants": "~16.0.2",
     "expo-font": "~12.0.9",
+    "expo-haptics": "~13.0.1",
     "expo-linking": "~6.3.1",
     "expo-router": "~3.5.23",
     "expo-splash-screen": "~0.27.5",
@@ -58,8 +61,7 @@
     "react-native-webview": "13.8.6",
     "sonner-native": "^0.14.2",
     "tailwindcss": "^3.4.13",
-    "zod": "^3.23.8",
-    "expo-haptics": "~13.0.1"
+    "zod": "^3.23.8"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
