--- a/package.json
+++ b/package.json
@@ -20,12 +20,14 @@
     "@expo/vector-icons": "^14.0.2",
     "@gluestack-ui/avatar": "^0.1.17",
     "@gluestack-ui/button": "^1.0.7",
+    "@gluestack-ui/divider": "^0.1.9",
     "@gluestack-ui/fab": "^0.1.21",
     "@gluestack-ui/form-control": "^0.1.18",
     "@gluestack-ui/icon": "^0.1.22",
     "@gluestack-ui/input": "^0.1.31",
     "@gluestack-ui/nativewind-utils": "^1.0.24",
     "@gluestack-ui/overlay": "^0.1.15",
+    "@gluestack-ui/radio": "^0.1.33",
     "@gluestack-ui/slider": "^0.1.25",
     "@gluestack-ui/toast": "^1.0.7",
     "@hookform/resolvers": "^3.9.0",
