--- a/package.json
+++ b/package.json
@@ -36,30 +36,38 @@
     "@react-native-async-storage/async-storage": "1.23.1",
     "@react-navigation/native": "^6.0.2",
     "@tanstack/react-query": "^5.59.0",
+    "@types/react-native-svg-animated-linear-gradient": "^0.4.3",
     "expo": "~51.0.28",
     "expo-build-properties": "~0.12.5",
     "expo-constants": "~16.0.2",
     "expo-font": "~12.0.9",
     "expo-haptics": "~13.0.1",
+    "expo-linear-gradient": "^13.0.2",
     "expo-linking": "~6.3.1",
     "expo-router": "~3.5.23",
     "expo-splash-screen": "~0.27.5",
     "expo-status-bar": "~1.12.1",
     "expo-system-ui": "~3.0.7",
     "expo-web-browser": "~13.0.3",
+    "install": "^0.13.0",
     "jotai": "^2.10.1",
     "lucide-react-native": "^0.447.0",
     "nativewind": "4.0.36",
+    "npm": "^10.9.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-hook-form": "^7.53.0",
     "react-native": "0.74.5",
     "react-native-actions-sheet": "^0.9.7",
+    "react-native-animated-linear-gradient": "^1.3.0",
     "react-native-gesture-handler": "~2.16.1",
+    "react-native-gradient-shimmer": "^2.0.0",
+    "react-native-linear-gradient": "^2.8.3",
     "react-native-reanimated": "~3.10.1",
     "react-native-safe-area-context": "4.10.5",
     "react-native-screens": "3.31.1",
     "react-native-svg": "^15.7.1",
+    "react-native-svg-animated-linear-gradient": "^0.4.0",
     "react-native-web": "~0.19.10",
     "react-native-webview": "13.8.6",
     "sonner-native": "^0.14.2",
